# vivi-paste

./: .gitignore  README.en.md  README.md  package-lock.json  package.json  tsconfig.app.json
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/event/: mod.rs
src-tauri/src/handler/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window_op/: mod.rs
src/components/: SideMenu.vue
~/.tauri/: vivi-paste.key  vivi-paste.key.pub
